# Deadcell-Solar-Conquest

./: Cargo.toml  Makefile.toml  bacon.toml  remove_dependencies.sh  rust-toolchain.toml  setup_dependencies.sh
.github/workflows/: continous_integration.yml
src/: components.rs  events.rs  main.rs  plugins.rs  systems.rs
src/assets/: user_interface.rs
src/assets/images/: mod.rs  planet_sprite.rs  space_facility_sprite.rs  space_facility_type.rs  space_sprite.rs  sun_sprite.rs
src/assets/images/faction_starship_sprite/: destruction_sprite.rs  engine_sprite.rs  firing_sprite.rs  shield_sprite.rs  starship_sprite.rs  weapon_sprite.rs
src/assets/user_interface/: selection_indicator.rs
src/assets/user_interface/icons/: space_facility_icons.rs
src/client/: client.rs  mod.rs
src/components/: mod.rs  planet.rs  server.rs  space_facility.rs  starship.rs  sun.rs  user_interface.rs
src/components/faction/: mod.rs  space_facility.rs  starship.rs  weapon.rs
src/components/map/: mod.rs  planet.rs  space.rs  star.rs  sun.rs
src/components/server/: mod.rs  player.rs  server_messages.rs  server_object.rs
src/components/sprite_component/: mod.rs  size_component.rs  starship_sprite_bundle.rs
src/components/user_interface/: controllable.rs  mod.rs  multiple_selection_box.rs  selection.rs
src/events/: input_events.rs  mod.rs  player_connected.rs  selection_events.rs  spawn_animated_sprite_event.rs  spawn_sprite_event.rs
src/events/event_handlers/: handle_mouse_input.rs  mod.rs  select.rs  spawn_animated_sprite.rs  spawn_sprite.rs
src/plugins/: client.rs  client_start.rs  client_update.rs  event_handlers.rs  events.rs  mod.rs  resources.rs  running.rs  server.rs  server_start.rs  server_update.rs  start.rs  user_interface.rs
src/queries/: animation_queries.rs  camera_queries.rs  faction_queries.rs  selection_queries.rs  space_queries.rs  user_interface_queries.rs
src/resources/: camera_settings.rs  faction.rs  game_settings.rs  keybindings.rs  lobby.rs  mod.rs  spawn_menu_selection.rs
src/server/: channels.rs  game_server.rs  mod.rs  server.rs
src/systems/: client.rs  mod.rs  selection.rs  server.rs
src/systems/animation/: animate.rs
src/systems/camera/: camera_movement.rs  camera_position_reset.rs  camera_zoom_keyboard.rs  camera_zoom_mouse_and_touchpad.rs  spawn_camera.rs
src/systems/client/: client_sync_players.rs  connect_to_server.rs  game_client.rs  mod.rs  receive_server_messages.rs
src/systems/controller/: set_controllable_target.rs
src/systems/movement/: controllable_move_to_target.rs
src/systems/selection/: controllable_move_to_target.rs  draw_multiple_selection_box.rs  move_to_point.rs  select_multiple_sprites.rs  select_sprite.rs  set_controllable_target.rs  update_selected_sprite_location.rs
src/systems/selection/movement/: mod.rs  move_to_point.rs  set_destination.rs  update_selected_sprite_destination.rs
src/systems/server/: send_server_messages.rs  server_sync_client.rs  server_sync_players.rs  server_update.rs  server_update_positions.rs
src/systems/spawning/: mod.rs  spawn_resource_planets.rs  spawn_space.rs  spawn_space_facilities.rs  spawn_space_stations.rs  spawn_stars.rs  spawn_starter_spaceship.rs  spawn_starter_starship.rs  spawn_suns.rs  spawner.rs
src/systems/user_interface/: sprite_selection.rs
src/systems/user_interface/interactions/: clear_all_selected.rs  spawn_selection.rs
src/systems/user_interface/layouts/: spawn_menu.rs
