[package]
name = "deadcell-solar-conquest"
version = "0.6.0"
authors = ["Skippy <steelstone3@gmail.com>", "Demengies <Demengies@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Deadcell-Solar-Conquest"
repository = "https://github.com/Steelstone3/Deadcell-Solar-Conquest"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
wayland-sys = "0.31"

[dependencies]
bevy_renet = { version = "0.0.12", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
float-lerp = "0"
rand = "0"
rand_derive2 = "0"
rayon = "1"
rstest = "0.23"
renet_visualizer = { version = "0.0.9", features = ["bevy"] }
bevy = "0.14"
bevy_egui = "0.30"
bincode = "1.3"

[workspace]
resolver = "2"

# No optimisation for better debugging. Set to 1 for some optimisation
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
